@@ -72,7 +72,7 @@ $chg_evt_handler = (PMA_USR_BROWSER_AGENT == 'IE' && PMA_USR_BROWSER_VER >= 5)
             <?php echo $strGeneratePassword; ?>
         </td>
         <td>
-            <input type="button" id="button_generate_password" value="<?php echo $strGenerate; ?>" onclick="suggestPassword()" />
+            <input type="button" id="button_generate_password" value="<?php echo $strGenerate; ?>" onclick="suggestPassword(this.form)" />
             <input type="text" name="generated_pw" id="generated_pw" />
         </td>
         </tr>
