@@ -783,7 +783,7 @@ function PMA_displayLoginInformationFields($mode = 'new')
        . '    ' . $GLOBALS['strGeneratePassword'] . ':' . "\n"
        . '</label>' . "\n"
        . '<span class="options">' . "\n"
-       . '    <input type="button" id="button_generate_password" value="' . $GLOBALS['strGenerate'] . '" onclick="suggestPassword()" />' . "\n"
+       . '    <input type="button" id="button_generate_password" value="' . $GLOBALS['strGenerate'] . '" onclick="suggestPassword(this.form)" />' . "\n"
        . '</span>' . "\n"
        . '<input type="text" name="generated_pw" id="generated_pw" />' . "\n"
        . '</div>' . "\n"
